# etl-brown-kendrick

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dbt/: dbt_project.yml
dbt/models/: sources.yml
dbt/models/marts/: usa_brown_kendrick.sql  usa_brown_kendrick.yml
dbt/models/staging/: stg_usa_brown.sql  stg_usa_kendrick.sql  stg_usa_kendrick.yml
dbt_profiles/: profiles.yml
ingest/: __init__.py  cli.py  config.py  ingest.py  sources.yml
