[project]
name = "fuse-usa-brown-kendrick"
version = "0.1.0"
description = "ETL Pipeline for Data Fusion: M.G. Brown & J.W. Kendrick Macroeconomic Sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.3",
    "pyyaml>=6.0.3",
]
